--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     ],
     "scripts": {
         "build": "tsc",
-        "start": "node ./build/index.js",
+        "start": "node ./build/src/index.js",
         "start:watch": "ts-node-dev --respawn ./src/index.ts",
         "lint": "eslint --fix .",
         "format": "prettier --write .",
