--- a/.github/workflows/releaser.yaml
+++ b/.github/workflows/releaser.yaml
@@ -13,6 +13,8 @@ jobs:
             - uses: actions/setup-node@v3
               with:
                   node-version: 20
+            - run: npm install
+            - run: npm run build
             - run: npm test
 
     publish-npm:
@@ -24,6 +26,8 @@ jobs:
               with:
                   node-version: 20
                   registry-url: https://registry.npmjs.org/
+            - run: npm install
+            - run: npm run build
             - run: npm publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{secrets.npm_token}}
