--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "description": "Generates a node base scaffold project",
     "version": "1.0.2",
     "files": [
-        "./build/**/*"
+        "./build/**/*",
+        "./assets/**/*"
     ],
     "main": "./build/index.js",
     "bin": "./build/index.js",
